--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
               총학생회 임기를 마무리하고 2018년에 지원하고 싶었지만 시간표가 안 맞았던 관계로... 1년을 기다려 
               드디어 들어오게 되어서 정말 기쁩니다
               <i class="fa fa-smile-o" style="font-size:16px"></i> 
-              앞으로 열심히 하겠습니다!
+              제가 만들고 싶은 서비스는 서울시 내에 위치한 카페들에 대한 정보와 방문후기를 공유할 수 있는 플랫폼입니다. 앞으로 열심히 하겠습니다!
             </p>
             
             <div class="gallery">
