--- a/index.html
+++ b/index.html
@@ -98,6 +98,9 @@
           <a href="https://www.facebook.com/2jy22" target="_blank">
             <i class="fab fa-facebook-f"></i>
           </a>
+          <a href="https://blog.naver.com/2jy22" target="_blank">
+            <i class="fas fa-edit"></i>
+          </a>
           <a href="https://github.com/JuYeong0413" target="_blank">
             <i class="fab fa-github"></i>
           </a>
