add : contributhon image

--- a/index.html
+++ b/index.html
@@ -139,10 +139,10 @@
               베스트 자바스크립트 튜토리얼의 한국어 번역 및 리뷰를 진행하고 있습니다.
             </p>
           
-            <!-- <div class="gallery">
-              <a href="static/images/#" data-lightbox="mygallery16"><img src="static/images/#"></a>
+            <div class="gallery">
+              <a href="static/images/IMG_7122.JPG" data-lightbox="mygallery16"><img src="static/images/IMG_7122.JPG"></a>
             </div>
-            <small>&nbsp;&nbsp;* 사진을 클릭하면 크게 볼 수 있습니다.</small> -->
+            <small>&nbsp;&nbsp;* 사진을 클릭하면 크게 볼 수 있습니다.</small>
             
             </div>
             <div class="resume-date text-md-right">
