update : design tools

--- a/index.html
+++ b/index.html
@@ -429,6 +429,9 @@
             Adobe Illustrator</li>
           <li>
             <i class="fa-li fa fa-check"></i>
+            Adobe Premiere Pro</li>
+          <li>
+            <i class="fa-li fa fa-check"></i>
             Adobe After Effects</li>
         </ul>
       </div>
