--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
             
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">2019. 09. 02 - 현재</span>
+              <span class="text-primary">2019. 09. 02 - 10. 10</span>
             </div>
         </div>
 
