--- a/index.html
+++ b/index.html
@@ -91,11 +91,11 @@
           <i class="fa fa-birthday-cake" style="font-size:20px"></i>
           1997. 04. 13 (23 years old)
           <br>
-          <i class="fa fa-phone" style="font-size:20px"></i>
+          <!-- <i class="fa fa-phone" style="font-size:20px"></i>
           010-7255-3753
-          <br>
+          <br> -->
           <i class="fa fa-envelope" style="font-size:20px"></i>
-          <a href="mailto:juyeonglee0413@gmail.com">juyeonglee0413@gmail.com</a>
+          <a href="mailto:2jy22@naver.com">2jy22@naver.com</a>
         </div>
         <p class="lead mb-5">
         안녕하세요, 저는 이주영이라고 합니다!
