--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
             <div class="subheading mb-3">멘토</div>
             <p>
               한국코드페어는 청소년들의 SW역량 강화와 SW저변 확대를 목적으로 과학기술정보통신부 주최, 한국정보화진흥원 주관으로 운영되는 페스티벌입니다. 
-              주요 프로그램 중 하나인 SW빌더스챌린지의 멘토로 선발되어 중고등학생들에게 웹 개발과 관련된 SW교육 질의응답 및 프로젝트 멘토링을 하고 있습니다.
+              주요 프로그램 중 하나인 SW빌더스챌린지의 멘토로 선발되어 중고등학생들에게 웹 개발과 관련된 SW교육 질의응답 및 프로젝트 멘토링을 진행했습니다.
             </p>
           
             <!-- <div class="gallery">
@@ -502,6 +502,9 @@
       <div class="w-100">
         <h2 class="mb-5">Awards &amp; Certifications</h2>
         <ul class="fa-ul mb-0">
+          <li>
+            <i class="fa-li fa fa-check text-success"></i>
+            정보처리기사</li>
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
             2<sup>nd</sup>
