--- a/index.html
+++ b/index.html
@@ -156,7 +156,8 @@
             <div class="subheading mb-3">JavaScript 튜토리얼 한글화 프로젝트 - MVP 선정</div>
             <p>
               과학기술정보통신부 주최, 정보통신산업진흥원 주관의 공개SW 컨트리뷰톤의 JavaScript 튜토리얼 한글화 프로젝트에 참여했습니다.<br>
-              베스트 자바스크립트 튜토리얼의 한국어 번역 및 리뷰를 진행했습니다. 컨트리뷰톤 이후에도 지속적인 기여를 하는 중입니다.
+              베스트 자바스크립트 튜토리얼의 한국어 번역 및 리뷰를 진행했습니다. 컨트리뷰톤 이후에도 지속적인 기여를 하는 중입니다.<br>
+              <a href="https://ko.javascript.info">모던 자바스크립트 튜토리얼</a>
             </p>
           
             <div class="gallery">
