--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
             <p>
               과학기술정보통신부 주최, 정보통신산업진흥원 주관의 공개SW 컨트리뷰톤의 JavaScript 튜토리얼 한글화 프로젝트에 참여했습니다.<br>
               베스트 자바스크립트 튜토리얼의 한국어 번역 및 리뷰를 진행했습니다. 컨트리뷰톤 이후에도 지속적인 기여를 하는 중입니다.<br>
-              <a href="https://ko.javascript.info">모던 자바스크립트 튜토리얼</a>
+              <a href="https://ko.javascript.info" target="_blank">모던 자바스크립트 튜토리얼</a>
             </p>
           
             <div class="gallery">
@@ -552,7 +552,7 @@
             <h3 class="mb-0">RE:CORD</h3>
             <div class="subheading mb-3">
               HTML/CSS/Javascript, Python Django<br>
-              팀장, 백엔드 개발<br><small><a href="http://recordmusic.site">사이트 보러가기</a></small>
+              팀장, 백엔드 개발<br><small><a href="http://recordmusic.site" target="_blank">사이트 보러가기</a></small>
             </div>
             <p>
               기존 음원사이트의 인기 가수 차트 줄세우기와 음원 사재기에서 벗어나 나만 알고 있는 명곡을 기록하는 서비스입니다.<br>
@@ -623,7 +623,7 @@
             <h3 class="mb-0">LIKELION ZONE</h3>
             <div class="subheading mb-3">
               HTML/CSS, Python Django<br>
-              백엔드 개발<br><small><a href="http://gjdigj145.pythonanywhere.com/">사이트 보러가기</a></small>
+              백엔드 개발<br><small><a href="http://gjdigj145.pythonanywhere.com/" target="_blank">사이트 보러가기</a></small>
             </div>
             <p>
               국민대, 동국대, 삼육대, 서울시립대, 성신여대 멋쟁이사자처럼의 연합 해커톤에서 '더 나은 멋쟁이 사자처럼을 위한 서비스' 주제에 참여했습니다.<br>
@@ -663,7 +663,7 @@
             
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">2018-2학기 웹프로그래밍 수업<br>2인 팀프로젝트</span>
+              <span class="text-primary">2018-2학기 웹프로그래밍 수업<br>2인 팀프로젝트</span>
             </div>
         </div>
 
