--- a/index.html
+++ b/index.html
@@ -152,11 +152,11 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">2019 공개SW 컨트리뷰톤 프로젝트 참가</h3>
+            <h3 class="mb-0">2019 공개SW 컨트리뷰톤 프로젝트 참가 및 정보통신산업진흥원장상 수상</h3>
             <div class="subheading mb-3">JavaScript 튜토리얼 한글화 프로젝트 - MVP 선정</div>
             <p>
               과학기술정보통신부 주최, 정보통신산업진흥원 주관의 공개SW 컨트리뷰톤의 JavaScript 튜토리얼 한글화 프로젝트에 참여했습니다.<br>
-              베스트 자바스크립트 튜토리얼의 한국어 번역 및 리뷰를 진행했습니다. 컨트리뷰톤 이후에도 지속적인 기여를 하는 중입니다.<br>
+              모던 자바스크립트 튜토리얼의 한국어 번역 및 리뷰를 진행했습니다. 컨트리뷰톤 이후에도 지속적인 기여를 하는 중입니다.<br>
               <a href="https://ko.javascript.info" target="_blank">모던 자바스크립트 튜토리얼</a>
             </p>
           
@@ -164,6 +164,7 @@
               <!-- <a href="static/images/IMG_7122.JPG" data-lightbox="mygallery16"><img src="static/images/IMG_7122.JPG"></a> -->
               <a href="static/images/contributhon.JPG" data-lightbox="mygallery16"><img src="static/images/contributhon.JPG"></a>
               <a href="static/images/mvp.JPG" data-lightbox="mygallery16"><img src="static/images/mvp.JPG"></a>
+              <a href="static/images/IMG_8110.JPG" data-lightbox="mygallery16"><img src="static/images/IMG_8110.JPG"></a>
             </div>
             <small>&nbsp;&nbsp;* 사진을 클릭하면 크게 볼 수 있습니다.</small>
             
@@ -503,6 +504,10 @@
       <div class="w-100">
         <h2 class="mb-5">Awards &amp; Certifications</h2>
         <ul class="fa-ul mb-0">
+          <li>
+              <i class="fa-li fa fa-trophy text-warning"></i>
+              4<sup>rd</sup>
+              Place - 2019 공개SW 컨트리뷰톤 정보통신산업진흥원장상</li>
           <li>
             <i class="fa-li fa fa-check text-success"></i>
             정보처리기사</li>
