remove : lensnine supporters

--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
           </div>
         </div>
 
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+        <!-- <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">렌즈나인 서포터즈 나인프렌즈 1기</h3>
             <div class="subheading mb-3"></div>
@@ -251,7 +251,7 @@
             <div class="resume-date text-md-right">
               <span class="text-primary">2018. 03 - 2018. 12</span>
             </div>
-        </div>
+        </div> -->
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
