--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@
             Django</li>
           <li>
             <i class="fa-li fa fa-check"></i>
-            Ruby on Rails</li>
+            Rails</li>
         </ul>
 
         <br><br>
