remove : hackerthon image

--- a/index.html
+++ b/index.html
@@ -566,7 +566,7 @@
             
             <div class="gallery">
               <a href="static/images/IMG_6516.JPG" data-lightbox="mygallery15"><img src="static/images/IMG_6516.JPG"></a>
-              <a href="static/images/IMG_6458.JPG" data-lightbox="mygallery15"><img src="static/images/IMG_6458.JPG"></a>
+              <!-- <a href="static/images/IMG_6458.JPG" data-lightbox="mygallery15"><img src="static/images/IMG_6458.JPG"></a> -->
               <a href="static/images/record.png" data-lightbox="mygallery15"><img src="static/images/record.png"></a>
             </div>
             <small>&nbsp;&nbsp;* 사진을 클릭하면 크게 볼 수 있습니다.</small>
