update : likelion 7th description

--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
             <h3 class="mb-0">멋쟁이사자처럼 7기</h3>
             <div class="subheading mb-3">홍보팀장 아기사자</div>
             <p>
-              멋쟁이사자처럼 7기로 매주 Python과 Django 교육을 받고 있고, Ruby on Rails 스터디에 참여했습니다.
+              멋쟁이사자처럼 7기로 매주 Python과 Django 교육을 받았으며 Ruby on Rails 스터디에 참여했습니다.
             </p>
 
             <div class="gallery">
