--- a/index.html
+++ b/index.html
@@ -132,6 +132,25 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
+            <h3 class="mb-0">펫트너</h3>
+            <div class="subheading mb-3">개발팀 인턴</div>
+            <p>
+              2019-겨울학기 현장실습으로 <a href="https://petner.kr/" target="_blank">펫트너</a> 개발팀에서 관리자 대시보드 개선 및 운영업무 자동화를 진행하고 있습니다.
+            </p>
+
+            <div class="gallery">
+              <a href="static/images/IMG_8851.JPG" data-lightbox="mygallery19"><img src="static/images/IMG_8851.JPG"></a>
+              <a href="static/images/IMG_8852.JPG" data-lightbox="mygallery19"><img src="static/images/IMG_8852.JPG"></a>
+            </div>
+            <small>&nbsp;&nbsp;* 사진을 클릭하면 크게 볼 수 있습니다.</small>
+
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">2020. 01. 03 - 현재</span>
+            </div>
+        </div>
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
             <h3 class="mb-0">멋쟁이사자처럼 8기</h3>
             <div class="subheading mb-3">동국대학교 대표</div>
             <p>
