remove: likelion zone url

--- a/index.html
+++ b/index.html
@@ -675,7 +675,7 @@
             <h3 class="mb-0">LIKELION ZONE</h3>
             <div class="subheading mb-3">
               HTML/CSS, Python Django<br>
-              백엔드 개발<br><small><a href="http://gjdigj145.pythonanywhere.com/" target="_blank">사이트 보러가기</a></small>
+              백엔드 개발
             </div>
             <p>
               국민대, 동국대, 삼육대, 서울시립대, 성신여대 멋쟁이사자처럼의 연합 해커톤에서 '더 나은 멋쟁이 사자처럼을 위한 서비스' 주제에 참여했습니다.<br>
