--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
           </div>
         </div>
 
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+        <!--<div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">동국대학교 Dream Major(전공 체험) 멘토</h3>
             <div class="subheading mb-3"></div>
@@ -357,7 +357,7 @@
             <div class="resume-date text-md-right">
               <span class="text-primary">2017. 01. 04</span>
             </div>
-        </div>
+        </div>-->
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
