--- a/index.html
+++ b/index.html
@@ -601,6 +601,34 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
+            <h3 class="mb-0">해줘(Haejwo)</h3>
+            <div class="subheading mb-3">
+              HTML/CSS/Javascript, Ruby on Rails<br>
+              <small><a href="https://play.google.com/store/apps/details?id=kr.rails" target="_blank">앱 다운로드하기(안드로이드만 지원)</a></small><br>
+              <small><a href="https://github.com/CSID-DGU/2019-2-OSSP1-Haejwo-1" target="_blank">GitHub</a></small>
+            </div>
+            <p>
+              시간이 부족하거나 공강시간에 할 일이 없는 동국대학교 학생들을 위한 앱으로, 인쇄, 복사부터 커피 배달 등 다양한 심부름을 요청할 수 있습니다.
+              심부름을 요청한 학생은 심부름을 수행한 학생에게 합리적인 보상을 제공하며 가입 시 철저한 재학생 인증과 사용자 신고 기능이 포함되어 있습니다.<br>
+              심부름 생성, 수정, 상세보기, 검색, 수락, 사용자 신고, 채팅 구현과 UI 개선에 참여했습니다.
+            </p>
+
+            <div class="gallery">
+              <a href="static/images/haejwo-home.png" data-lightbox="mygallery20"><img src="static/images/haejwo-home.png"></a>
+              <a href="static/images/haejwo-chat.png" data-lightbox="mygallery20"><img src="static/images/haejwo-chat.png"></a>
+              <a href="static/images/haejwo-map.png" data-lightbox="mygallery20"><img src="static/images/haejwo-map.png"></a>
+              <a href="static/images/haejwo-blacklist.png" data-lightbox="mygallery20"><img src="static/images/haejwo-blacklist.png"></a>
+            </div>
+            <small>&nbsp;&nbsp;* 사진을 클릭하면 크게 볼 수 있습니다.</small>
+
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">2019-2학기 공개SW프로젝트 수업<br>3인 팀프로젝트</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
             <h3 class="mb-0">RE:CORD</h3>
             <div class="subheading mb-3">
               HTML/CSS/Javascript, Python Django<br>
