remove: haejwo image

--- a/index.html
+++ b/index.html
@@ -613,13 +613,13 @@
               심부름 생성, 수정, 상세보기, 검색, 수락, 사용자 신고, 채팅 구현과 UI 개선에 참여했습니다.
             </p>
 
-            <div class="gallery">
+            <!--<div class="gallery">
               <a href="static/images/haejwo-home.png" data-lightbox="mygallery20"><img src="static/images/haejwo-home.png"></a>
               <a href="static/images/haejwo-chat.png" data-lightbox="mygallery20"><img src="static/images/haejwo-chat.png"></a>
               <a href="static/images/haejwo-map.png" data-lightbox="mygallery20"><img src="static/images/haejwo-map.png"></a>
               <a href="static/images/haejwo-blacklist.png" data-lightbox="mygallery20"><img src="static/images/haejwo-blacklist.png"></a>
             </div>
-            <small>&nbsp;&nbsp;* 사진을 클릭하면 크게 볼 수 있습니다.</small>
+            <small>&nbsp;&nbsp;* 사진을 클릭하면 크게 볼 수 있습니다.</small>-->
 
           </div>
           <div class="resume-date text-md-right">
