--- a/index.html
+++ b/index.html
@@ -133,10 +133,10 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">펫트너</h3>
-            <div class="subheading mb-3">개발팀 인턴(현장실습) 및 외주 개발자</div>
+            <div class="subheading mb-3">개발팀 인턴(현장실습)</div>
             <p>
-              2019-겨울학기 현장실습(2020. 01. 03 - 02. 28)으로 <a href="https://petner.kr/" target="_blank">펫트너</a> 개발팀에서 Ruby on Rails를 이용한 관리자 대시보드 개선 및 운영업무 자동화를 진행했습니다.
-              현장실습 기간 이후(2020. 03. 02 - 13) 외주 개발자로 Flutter 앱 개발에 참여했습니다.
+              2019-겨울학기 현장실습(2020. 01. 03 - 03. 13)으로 <a href="https://petner.kr/" target="_blank">펫트너</a> 개발팀에서 Ruby on Rails를 이용한 관리자 대시보드 개선 및 운영업무 자동화, 
+              Flutter 앱 개발에 참여했습니다.
             </p>
 
             <div class="gallery">
