--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@
             Ruby</li>
           <li>
             <i class="fa-li fa fa-check"></i>
-            Dart (learning)</li>
+            Dart (beginner)</li>
         </ul>
 
         <br><br>
@@ -485,7 +485,10 @@
             Rails</li>
           <li>
             <i class="fa-li fa fa-check"></i>
-            Flutter (learning)</li>
+            Flutter (beginner)</li>
+          <li>
+            <i class="fa-li fa fa-check"></i>
+            React (beginner)</li>
         </ul>
 
         <br><br>
@@ -572,7 +575,7 @@
             Place - 2019 멋쟁이 사자처럼 소속 5개 대학 연합 해커톤 '새뜻톤' 우승</li>
           <li>
             <i class="fa-li fa fa-check text-success"></i>
-            TOEIC 975</li>
+            TOEIC 970</li>
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
             2018 동국대학교 프로그래밍 경진대회 입상</li>
