Update email address

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
           010-7255-3753
           <br> -->
           <i class="fa fa-envelope" style="font-size:20px"></i>
-          <a href="mailto:2jy22@naver.com">2jy22@naver.com</a>
+          <a href="mailto:juyeonglee0413@google.com">juyeonglee0413@google.com</a>
         </div>
         <p class="lead mb-5">
         안녕하세요, 저는 이주영이라고 합니다!
