--- a/index.html
+++ b/index.html
@@ -132,6 +132,28 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
+            <h3 class="mb-0">2020 오픈소스 컨트리뷰톤 프로젝트 참가 및 과학기술정보통신부장관상 수상</h3>
+            <div class="subheading mb-3">Flutter Moum 프로젝트</div>
+            <p>
+              과학기술정보통신부 주최, 정보통신산업진흥원 주관의 오픈소스 컨트리뷰톤의 Flutter Moum 프로젝트에 참여하여 Google에서 개발중인 Flutter 프레임워크에 기여했습니다. 컨트리뷰톤 이후에도 지속적인 기여를 하는 중입니다.<br>
+            </p>
+
+            <p class="mb-0">
+              * 발표영상
+            </p>
+            <br>
+            <div class="youtubeWrap">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/TwB017_356s" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">2020. 08. 01 - 09. 26</span>
+            </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
             <h3 class="mb-0">펫트너</h3>
             <div class="subheading mb-3">개발팀 인턴(현장실습)</div>
             <p>
@@ -470,7 +492,7 @@
             Ruby</li>
           <li>
             <i class="fa-li fa fa-check"></i>
-            Dart (beginner)</li>
+            Dart</li>
         </ul>
 
         <br><br>
@@ -485,7 +507,7 @@
             Rails</li>
           <li>
             <i class="fa-li fa fa-check"></i>
-            Flutter (beginner)</li>
+            Flutter</li>
           <li>
             <i class="fa-li fa fa-check"></i>
             React (beginner)</li>
@@ -555,16 +577,24 @@
         <h2 class="mb-5">Awards &amp; Certifications</h2>
         <ul class="fa-ul mb-0">
           <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
-              4<sup>rd</sup>
-              Place - 2019 공개SW 컨트리뷰톤 정보통신산업진흥원장상</li>
+            <i class="fa-li fa fa-trophy text-warning"></i>
+            4<sup>th</sup>
+            Place - 2020 롯데그룹X멋쟁이사자처럼 온라인 해커톤 동상</li>
+          <li>
+            <i class="fa-li fa fa-trophy text-warning"></i>
+            1<sup>st</sup>
+            Place - 2020 오픈소스 컨트리뷰톤 과학기술정보통신부장관상</li>
+          <li>
+            <i class="fa-li fa fa-trophy text-warning"></i>
+            4<sup>th</sup>
+            Place - 2019 공개SW 컨트리뷰톤 정보통신산업진흥원장상</li>
           <li>
             <i class="fa-li fa fa-check text-success"></i>
             정보처리기사</li>
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
             2<sup>nd</sup>
-            Place - 2019 멋쟁이 사자처럼 해커톤 FLETA 대표상</li>
+            Place - 2019 멋쟁이사자처럼 해커톤 FLETA 대표상</li>
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
             3<sup>rd</sup>
@@ -572,7 +602,7 @@
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
             1<sup>st</sup>
-            Place - 2019 멋쟁이 사자처럼 소속 5개 대학 연합 해커톤 '새뜻톤' 우승</li>
+            Place - 2019 멋쟁이사자처럼 소속 5개 대학 연합 해커톤 '새뜻톤' 우승</li>
           <li>
             <i class="fa-li fa fa-check text-success"></i>
             TOEIC 970</li>
@@ -601,6 +631,31 @@
     <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="projects">
       <div class="w-100">
         <h2 class="mb-5">Projects</h2>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">LOHB'S Pick</h3>
+            <div class="subheading mb-3">
+              HTML/CSS/Javascript, Python Django<br>
+              팀장, 백엔드 개발<br><small><a href="http://lohbs-pick.site" target="_blank">사이트 보러가기</a></small>
+            </div>
+            <p>
+              롭스에 입점되어 있는 상품 조합을 사용자가 원하는대로 구성해 희망하는 주기마다 정기배송을 받는 서비스입니다.<br>
+              멋쟁이사자처럼 소속 전국 42개 대학교, 71개의 아이디어 중에서 동상을 수상했습니다.
+            </p>
+
+            <div class="gallery">
+              <a href="static/images/IMG_1398.PNG" data-lightbox="mygallery21"><img src="static/images/IMG_1398.PNG"></a>
+              <a href="static/images/IMG_1370.jpg" data-lightbox="mygallery21"><img src="static/images/IMG_1370.jpg"></a>
+              <a href="static/images/IMG_1368.jpg" data-lightbox="mygallery21"><img src="static/images/IMG_1368.jpg"></a>
+            </div>
+            <small>&nbsp;&nbsp;* 사진을 클릭하면 크게 볼 수 있습니다.</small>
+
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">2020. 10. 07 - 11. 06<br>멋쟁이사자처럼 해커톤</span>
+          </div>
+        </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
@@ -639,7 +694,7 @@
             </div>
             <p>
               기존 음원사이트의 인기 가수 차트 줄세우기와 음원 사재기에서 벗어나 나만 알고 있는 명곡을 기록하는 서비스입니다.<br>
-              멋쟁이 사자처럼 소속 전국 66개 대학교 약 1,100명의 참가자들 그리고 226개의 아이디어 중에서 2등을 차지했습니다.
+              멋쟁이사자처럼 소속 전국 66개 대학교 약 1,100명의 참가자들 그리고 226개의 아이디어 중에서 2등을 차지했습니다.
             </p>
 
             <div class="gallery">
@@ -651,7 +706,7 @@
 
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">2019. 08. 09 - 10<br>멋쟁이 사자처럼 해커톤</span>
+            <span class="text-primary">2019. 08. 09 - 10<br>멋쟁이사자처럼 해커톤</span>
           </div>
         </div>
 
@@ -709,8 +764,8 @@
               백엔드 개발
             </div>
             <p>
-              국민대, 동국대, 삼육대, 서울시립대, 성신여대 멋쟁이사자처럼의 연합 해커톤에서 '더 나은 멋쟁이 사자처럼을 위한 서비스' 주제에 참여했습니다.<br>
-              멋쟁이 사자처럼 소속 학생들이 자유롭게 모임을 개설하고 참여할 수 있는 서비스입니다.<br>
+              국민대, 동국대, 삼육대, 서울시립대, 성신여대 멋쟁이사자처럼의 연합 해커톤에서 '더 나은 멋쟁이사자처럼을 위한 서비스' 주제에 참여했습니다.<br>
+              멋쟁이사자처럼 소속 학생들이 자유롭게 모임을 개설하고 참여할 수 있는 서비스입니다.<br>
               <a href="https://blog.naver.com/2jy22/221534215205">자세히 보러가기</a>
             </p>
 
@@ -721,7 +776,7 @@
 
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">2019. 05. 05 - 06<br>멋쟁이 사자처럼 연합 해커톤 "새뜻톤"</span>
+            <span class="text-primary">2019. 05. 05 - 06<br>멋쟁이사자처럼 연합 해커톤 "새뜻톤"</span>
           </div>
         </div>
 
