--- a/index.html
+++ b/index.html
@@ -142,9 +142,12 @@
               * 발표영상
             </p>
             <br>
-            <div class="youtubeWrap">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/TwB017_356s" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            </div>
+            <p class="mt-3 mb-0">
+              * 인터뷰 영상
+            </p>
+            <br>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/fjSqtY2m7zc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
             </div>
             <div class="resume-date text-md-right">
