--- a/index.html
+++ b/index.html
@@ -116,11 +116,6 @@
             <i class="fab fa-github"></i>
           </a>
         </div>
-
-        <br><br>
-        <p class="lead mb-5">
-          더 자세하게 알고싶다면? <a href="https://www.leadme.today/5113847642849280" target="_blank">이주영의 커리어패스 보러가기</a>
-        </p>
       </div>
     </section>
 
@@ -511,9 +506,6 @@
           <li>
             <i class="fa-li fa fa-check"></i>
             Flutter</li>
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            React (beginner)</li>
         </ul>
 
         <br><br>
@@ -579,6 +571,10 @@
       <div class="w-100">
         <h2 class="mb-5">Awards &amp; Certifications</h2>
         <ul class="fa-ul mb-0">
+          <li>
+            <i class="fa-li fa fa-trophy text-warning"></i>
+            1<sup>st</sup>
+            Place - 2020년 2학기 동국대학교 소프트웨어공학개론 수업 프로젝트 최우수상</li>
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
             4<sup>th</sup>
