--- a/index.html
+++ b/index.html
@@ -834,7 +834,7 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">2018 여름 청년취업아카데미</h3>
-            <div class="subheading mb-3">SW 개발을 위한 Java기본 알고리즘 과정</div>
+            <div class="subheading mb-3">SW 개발을 위한 Java기반 알고리즘 과정</div>
             <p>
               주5회, 8시간씩 총 200시간의 교육을 받았습니다.<br>
               Java 언어, 자료구조와 Oracle sql을 배웠고 과정을 마무리하며 개인 프로젝트로 "학원 관리 시스템"을 구현했습니다.<br>
