--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
             <h3 class="mb-0">2020 오픈소스 컨트리뷰톤 프로젝트 참가 및 과학기술정보통신부장관상 수상</h3>
             <div class="subheading mb-3">Flutter Moum 프로젝트</div>
             <p>
-              과학기술정보통신부 주최, 정보통신산업진흥원 주관의 오픈소스 컨트리뷰톤의 Flutter Moum 프로젝트에 참여하여 Google에서 개발중인 Flutter 프레임워크에 기여했습니다. 컨트리뷰톤 이후에도 지속적인 기여를 하는 중입니다.<br>
+              과학기술정보통신부 주최, 정보통신산업진흥원에서 주관한 오픈소스 컨트리뷰톤의 Flutter Moum 프로젝트에 참여하여 Google에서 개발중인 Flutter 프레임워크에 기여했습니다.<br>
             </p>
 
             <p class="mb-0">
@@ -155,8 +155,7 @@
             <h3 class="mb-0">펫트너</h3>
             <div class="subheading mb-3">개발팀 인턴(현장실습)</div>
             <p>
-              2019-겨울학기 현장실습(2020. 01. 03 - 03. 13)으로 <a href="https://petner.kr/" target="_blank">펫트너</a> 개발팀에서 Ruby on Rails를 이용한 관리자 대시보드 개선 및 운영업무 자동화, 
-              Flutter 앱 개발에 참여했습니다.
+              2019-겨울학기 현장실습(2020. 01. 03 - 03. 13)으로 <a href="https://petner.kr/" target="_blank">펫트너</a> 개발팀에서 Ruby on Rails를 이용한 관리자 대시보드 개선 및 운영업무 자동화, Flutter 앱 개발에 참여했습니다.
             </p>
 
             <div class="gallery">
@@ -175,7 +174,7 @@
             <h3 class="mb-0">멋쟁이사자처럼 8기</h3>
             <div class="subheading mb-3">동국대학교 대표</div>
             <p>
-              동국대학교 멋쟁이사자처럼 8기 대표로 활동중입니다.
+              동국대학교 멋쟁이사자처럼 8기 대표로 활동했습니다. 전반적인 동아리 운영 및 프로그래밍 교육을 진행했습니다.
             </p>
 
             <div class="gallery">
@@ -188,7 +187,7 @@
 
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">2020. 01 - 현재</span>
+              <span class="text-primary">2020. 01 - 12</span>
             </div>
         </div>
 
@@ -217,7 +216,7 @@
             <h3 class="mb-0">2019 공개SW 컨트리뷰톤 프로젝트 참가 및 정보통신산업진흥원장상 수상</h3>
             <div class="subheading mb-3">JavaScript 튜토리얼 한글화 프로젝트 - MVP 선정</div>
             <p>
-              과학기술정보통신부 주최, 정보통신산업진흥원 주관의 공개SW 컨트리뷰톤의 JavaScript 튜토리얼 한글화 프로젝트에 참여하여 모던 자바스크립트 튜토리얼의 한국어 번역 및 리뷰를 진행했습니다. 컨트리뷰톤 이후에도 지속적인 기여를 하는 중입니다.<br>
+              과학기술정보통신부 주최, 정보통신산업진흥원에서 주관한 공개SW 컨트리뷰톤의 JavaScript 튜토리얼 한글화 프로젝트에 참여하여 모던 자바스크립트 튜토리얼의 한국어 번역 및 리뷰를 진행했습니다.<br>
               <a href="https://ko.javascript.info" target="_blank">모던 자바스크립트 튜토리얼</a>
             </p>
 
