--- a/index.html
+++ b/index.html
@@ -571,6 +571,9 @@
         <h2 class="mb-5">Awards &amp; Certifications</h2>
         <ul class="fa-ul mb-0">
           <li>
+            <i class="fa-li fa fa-check text-success"></i>
+            OPIc AL</li>
+          <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
             1<sup>st</sup>
             Place - 2020년 2학기 동국대학교 소프트웨어공학개론 수업 프로젝트 최우수상</li>
