--- a/index.html
+++ b/index.html
@@ -193,21 +193,24 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">2019 Hacktoberfest</h3>
+            <h3 class="mb-0">2019 & 2020 Hacktoberfest</h3>
             <div class="subheading mb-3"></div>
             <p>
               Hacktoberfest는 DigitalOcean과 DEV에서 진행하는 한 달짜리 오픈소스 커뮤니티 축제입니다.<br>
-              한 달 동안 Github의 public repository에 Pull Request 4개 이상을 생성하면 특별 제작한 티셔츠와 스티커를 받을 수 있는 이벤트입니다. 저는 총 17개의 Pull Request를 생성해 상품을 받았습니다. <i class="fa fa-smile-o" style="font-size:16px"></i>
+              한 달 동안 Github의 public repository에 Pull Request 4개 이상을 생성하면 특별 제작한 티셔츠와 스티커를 받을 수 있는 이벤트입니다. 저는 2019년, 2020년 Hacktoberfest 기간동안 Pull Request를 4개 이상 생성하고 merged 되어 상품을 받았습니다. <i class="fa fa-smile-o" style="font-size:16px"></i>
             </p>
 
             <div class="gallery">
-              <a href="static/images/hacktoberfest.png" data-lightbox="mygallery17"><img src="static/images/hacktoberfest.png"></a>
+              <a href="static/images/hacktoberfest-2019.png" data-lightbox="mygallery17"><img src="static/images/hacktoberfest-2019.png"></a>
+              <a href="static/images/hacktoberfest-2020.png" data-lightbox="mygallery17"><img src="static/images/hacktoberfest-2020.png"></a>
             </div>
             <small>&nbsp;&nbsp;* 사진을 클릭하면 크게 볼 수 있습니다.</small>
 
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">2019. 10. 01 - 31</span>
+              <br>
+              <span class="text-primary">2020. 10. 01 - 31</span>
             </div>
         </div>
 
