Add Tistory url

--- a/index.html
+++ b/index.html
@@ -109,6 +109,9 @@
           <a href="https://www.facebook.com/2jy22" target="_blank">
             <i class="fab fa-facebook-f"></i>
           </a>
+          <a href="https://juyeonglee.tistory.com/" target="_blank">
+            <img class="fas" src="static/images/tistory-icon.png">
+          </a>
           <a href="https://blog.naver.com/2jy22" target="_blank">
             <i class="fas fa-edit"></i>
           </a>
