Add TOEIC Speaking

--- a/index.html
+++ b/index.html
@@ -578,6 +578,9 @@
         <ul class="fa-ul mb-0">
           <li>
             <i class="fa-li fa fa-check text-success"></i>
+            TOEIC Speaking Level 7</li>
+          <li>
+            <i class="fa-li fa fa-check text-success"></i>
             OPIc AL</li>
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
