--- a/index.html
+++ b/index.html
@@ -85,11 +85,8 @@
         </h1>
         <div class="subheading mb-5 bmjua">
           <i class="fa fa-birthday-cake" style="font-size:20px"></i>
-          1997. 04. 13 (24 years old)
+          1997. 04. 13 (25 years old)
           <br>
-          <!-- <i class="fa fa-phone" style="font-size:20px"></i>
-          010-7255-3753
-          <br> -->
           <i class="fa fa-envelope" style="font-size:20px"></i>
           <a href="mailto:juyeonglee0413@google.com">juyeonglee0413@google.com</a>
         </div>
@@ -106,13 +103,16 @@
             <i class="fab fa-facebook-f"></i>
           </a>
           <a href="https://juyeonglee.tistory.com/" target="_blank">
-            <img class="fas" src="static/images/tistory-icon.png">
+            <img src="static/images/tistory-icon.png">
           </a>
           <a href="https://blog.naver.com/2jy22" target="_blank">
-            <i class="fas fa-edit"></i>
+            <i class="fab fa-blogger-b"></i>
           </a>
           <a href="https://github.com/JuYeong0413" target="_blank">
             <i class="fab fa-github"></i>
+          </a>
+          <a href="https://linkedin.com/in/juyeonglee0413" target="_blank">
+            <i class="fab fa-linkedin-in"></i>
           </a>
         </div>
       </div>
