--- a/index.html
+++ b/index.html
@@ -126,14 +126,56 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">2020 오픈소스 컨트리뷰톤 프로젝트 참가 및 과학기술정보통신부장관상 수상</h3>
+            <h3 class="mb-0">SW중심대학 공동해커톤 참여</h3>
+            <div class="subheading mb-3">팀장, SW개발자</div>
+            <p>
+              과학기술정보통신부 주최, 정보통신기획평가원과 SW중심대학협의회에서 주관한 SW중심대학 공동해커톤에서 개발자로 참여했습니다.<br>
+            </p>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">2020. 02. 04 - 06</span>
+            </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">2020 Hacktoberfest</h3>
+            <div class="subheading mb-3"></div>
+            <p>
+              Hacktoberfest는 DigitalOcean과 DEV에서 진행하는 한 달짜리 오픈소스 커뮤니티 축제입니다.<br>
+              한 달 동안 Github의 public repository에 Pull Request 4개 이상을 생성하면 특별 제작한 티셔츠와 스티커를 받을 수 있는 이벤트입니다. 저는 2020년 Hacktoberfest 기간동안 Pull Request를 4개 생성하고 merged 되어 상품을 받았습니다.
+            </p>
+            <p>
+              <참여한 오픈소스 프로젝트 목록><br>
+              * <a href="https://github.com/libreoffice-kr/autocorr_kr" target="_blank">libreoffice-kr/autocorr_kr</a><br>
+              * <a href="https://github.com/phg98/hacktoberfestkorea" target="_blank">phg98/hacktoberfestkorea</a><br>
+              * <a href="https://github.com/phg98/phg98p5sample" target="_blank">phg98/phg98p5sample</a><br>
+              * <a href="https://github.com/phg98/hands-on" target="_blank">phg98/hands-on</a>
+            </p>
+
+            <div class="gallery">
+              <a href="static/images/experience/2020-hacktoberfest-1.PNG" data-lightbox="e-13"><img src="static/images/experience/2020-hacktoberfest-1.PNG"></a>
+              <a href="static/images/experience/2020-hacktoberfest-2.JPG" data-lightbox="e-13"><img src="static/images/experience/2020-hacktoberfest-2.JPG"></a>
+            </div>
+            <small>&nbsp;&nbsp;* 사진을 클릭하면 크게 볼 수 있습니다.</small>
+
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">2020. 10. 01 - 31</span>
+            </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">2020 오픈소스 컨트리뷰톤 참가</h3>
             <div class="subheading mb-3">Flutter Moum 프로젝트</div>
             <p>
               과학기술정보통신부 주최, 정보통신산업진흥원에서 주관한 오픈소스 컨트리뷰톤의 Flutter Moum 프로젝트에 참여하여 Google에서 개발중인 Flutter 프레임워크에 기여했습니다.<br>
+              저는 6주간의 컨트리뷰톤 기간동안 총 14개의 Pull Request를 생성했고, 그 중 11개가 merged 되었습니다. 프로젝트 대표 멘티로 최종 발표와 인터뷰에도 참여했습니다.
             </p>
 
             <p class="mb-0">
-              * 발표영상
+              * 최종발표 영상
             </p>
             <br>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/TwB017_356s" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -154,12 +196,12 @@
             <h3 class="mb-0">펫트너</h3>
             <div class="subheading mb-3">개발팀 인턴(현장실습)</div>
             <p>
-              2019-겨울학기 현장실습(2020. 01. 03 - 03. 13)으로 <a href="https://petner.kr/" target="_blank">펫트너</a> 개발팀에서 Ruby on Rails를 이용한 관리자 대시보드 개선 및 운영업무 자동화, Flutter 앱 개발에 참여했습니다.
+              2019-겨울학기 현장실습으로 <a href="https://petner.kr/" target="_blank">펫트너</a> 개발팀에서 Ruby on Rails를 이용한 관리자 대시보드 개선 및 운영업무 자동화, Flutter 앱 개발에 참여했습니다.
             </p>
 
             <div class="gallery">
-              <a href="static/images/IMG_8851.JPG" data-lightbox="mygallery19"><img src="static/images/IMG_8851.JPG"></a>
-              <a href="static/images/IMG_8852.JPG" data-lightbox="mygallery19"><img src="static/images/IMG_8852.JPG"></a>
+              <a href="static/images/experience/petner-1.JPG" data-lightbox="e-11"><img src="static/images/experience/petner-1.JPG"></a>
+              <a href="static/images/experience/petner-2.JPG" data-lightbox="e-11"><img src="static/images/experience/petner-2.JPG"></a>
             </div>
             <small>&nbsp;&nbsp;* 사진을 클릭하면 크게 볼 수 있습니다.</small>
 
@@ -168,6 +210,7 @@
               <span class="text-primary">2020. 01. 03 - 03. 13</span>
             </div>
         </div>
+
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">멋쟁이사자처럼 8기</h3>
@@ -177,56 +220,49 @@
             </p>
 
             <div class="gallery">
-              <!-- <a href="static/images/IMG_7122.JPG" data-lightbox="mygallery18"><img src="static/images/IMG_7122.JPG"></a>
-              <a href="static/images/contributhon.JPG" data-lightbox="mygallery18"><img src="static/images/contributhon.JPG"></a>
-              <a href="static/images/mvp.JPG" data-lightbox="mygallery18"><img src="static/images/mvp.JPG"></a>
-              <a href="static/images/IMG_8110.JPG" data-lightbox="mygallery18"><img src="static/images/IMG_8110.JPG"></a> -->
+              <a href="static/images/experience/likelion-8-1.JPEG" data-lightbox="e-10"><img src="static/images/experience/likelion-8-1.JPEG"></a>
+              <a href="static/images/experience/likelion-8-2.PNG" data-lightbox="e-10"><img src="static/images/experience/likelion-8-2.PNG"></a>
             </div>
-            <!-- <small>&nbsp;&nbsp;* 사진을 클릭하면 크게 볼 수 있습니다.</small> -->
+            <small>&nbsp;&nbsp;* 사진을 클릭하면 크게 볼 수 있습니다.</small>
 
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">2020. 01 - 12</span>
+              <span class="text-primary">2020. 01 - 2020. 12</span>
             </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">2019 & 2020 Hacktoberfest</h3>
+            <h3 class="mb-0">2019 Hacktoberfest</h3>
             <div class="subheading mb-3"></div>
             <p>
               Hacktoberfest는 DigitalOcean과 DEV에서 진행하는 한 달짜리 오픈소스 커뮤니티 축제입니다.<br>
-              한 달 동안 Github의 public repository에 Pull Request 4개 이상을 생성하면 특별 제작한 티셔츠와 스티커를 받을 수 있는 이벤트입니다. 저는 2019년, 2020년 Hacktoberfest 기간동안 Pull Request를 4개 이상 생성하고 merged 되어 상품을 받았습니다. <i class="fa fa-smile-o" style="font-size:16px"></i>
+              한 달 동안 Github의 public repository에 Pull Request 4개 이상을 생성하면 특별 제작한 티셔츠와 스티커를 받을 수 있는 이벤트입니다. 저는 2019년 Hacktoberfest 기간동안 Pull Request를 4개 이상 생성하고 merged 되어 상품을 받았습니다.
             </p>
 
             <div class="gallery">
-              <a href="static/images/hacktoberfest-2019.png" data-lightbox="mygallery17"><img src="static/images/hacktoberfest-2019.png"></a>
-              <a href="static/images/hacktoberfest-2020.png" data-lightbox="mygallery17"><img src="static/images/hacktoberfest-2020.png"></a>
+              <a href="static/images/experience/2019-hacktoberfest.png" data-lightbox="e-09"><img src="static/images/experience/2019-hacktoberfest.png"></a>
             </div>
             <small>&nbsp;&nbsp;* 사진을 클릭하면 크게 볼 수 있습니다.</small>
 
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">2019. 10. 01 - 31</span>
-              <br>
-              <span class="text-primary">2020. 10. 01 - 31</span>
             </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">2019 공개SW 컨트리뷰톤 프로젝트 참가 및 정보통신산업진흥원장상 수상</h3>
+            <h3 class="mb-0">2019 공개SW 컨트리뷰톤 프로젝트 참가</h3>
             <div class="subheading mb-3">JavaScript 튜토리얼 한글화 프로젝트 - MVP 선정</div>
             <p>
               과학기술정보통신부 주최, 정보통신산업진흥원에서 주관한 공개SW 컨트리뷰톤의 JavaScript 튜토리얼 한글화 프로젝트에 참여하여 모던 자바스크립트 튜토리얼의 한국어 번역 및 리뷰를 진행했습니다.<br>
-              <a href="https://ko.javascript.info" target="_blank">모던 자바스크립트 튜토리얼</a>
+              <a href="https://ko.javascript.info" target="_blank">모던 자바스크립트 튜토리얼 바로가기</a>
             </p>
 
             <div class="gallery">
-              <!-- <a href="static/images/IMG_7122.JPG" data-lightbox="mygallery16"><img src="static/images/IMG_7122.JPG"></a> -->
-              <a href="static/images/contributhon.JPG" data-lightbox="mygallery16"><img src="static/images/contributhon.JPG"></a>
-              <a href="static/images/mvp.JPG" data-lightbox="mygallery16"><img src="static/images/mvp.JPG"></a>
-              <a href="static/images/IMG_8110.JPG" data-lightbox="mygallery16"><img src="static/images/IMG_8110.JPG"></a>
+              <a href="static/images/contributhon.JPG" data-lightbox="e-08"><img src="static/images/contributhon.JPG"></a>
+              <a href="static/images/mvp.JPG" data-lightbox="e-08"><img src="static/images/mvp.JPG"></a>
             </div>
             <small>&nbsp;&nbsp;* 사진을 클릭하면 크게 볼 수 있습니다.</small>
 
@@ -242,17 +278,136 @@
             <div class="subheading mb-3">멘토</div>
             <p>
               한국코드페어는 청소년들의 SW역량 강화와 SW저변 확대를 목적으로 과학기술정보통신부 주최, 한국정보화진흥원 주관으로 운영되는 페스티벌입니다.
-              주요 프로그램 중 하나인 SW빌더스챌린지의 멘토로 선발되어 중고등학생들에게 웹 개발과 관련된 SW교육 질의응답 및 프로젝트 멘토링을 진행했습니다.
+              주요 프로그램 중 하나인 SW빌더스챌린지의 멘토로 선발되어 중・고등학생들에게 웹 개발과 관련된 SW교육 질의응답 및 프로젝트 멘토링을 진행했습니다.
             </p>
 
             <!-- <div class="gallery">
-              <a href="static/images/#" data-lightbox="mygallery15"><img src="static/images/#"></a>
+              <a href="static/images/experience/#" data-lightbox="e-07"><img src="static/images/experience/#"></a>
             </div>
             <small>&nbsp;&nbsp;* 사진을 클릭하면 크게 볼 수 있습니다.</small> -->
 
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">2019. 09. 02 - 10. 12</span>
+            </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">멋쟁이사자처럼 연합 해커톤 '신촌 올빼미톤' 참여</h3>
+            <p>
+              서강대학교, 연세대학교, 이화여자대학교 멋쟁이사자처럼이 주최하고 서강기업가정신센터가 주관한 2019 신촌 올빼미톤에 참여했습니다.
+            </p>
+
+            <div class="gallery">
+              <a href="static/images/experience/owl-1.JPEG" data-lightbox="e-06"><img src="static/images/experience/owl-1.JPEG"></a>
+              <a href="static/images/experience/owl-2.JPG" data-lightbox="e-06"><img src="static/images/experience/owl-2.JPG"></a>
+            </div>
+            <small>&nbsp;&nbsp;* 사진을 클릭하면 크게 볼 수 있습니다.</small>
+
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">2019. 06. 29 - 30</span>
+            </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">멋쟁이사자처럼 소속 5개 대학 연합 해커톤 '새뜻톤' 참여</h3>
+            <p>
+              국민대학교, 동국대학교, 삼육대학교, 성신여자대학교, 서울시립대학교 총 5개 학교의 멋쟁이사자처럼 연합 해커톤에 참여했습니다.
+            </p>
+
+            <div class="gallery">
+              <a href="static/images/experience/saetteut-1.JPEG" data-lightbox="e-05"><img src="static/images/experience/saetteut-1.JPEG"></a>
+              <a href="static/images/experience/saetteut-2.JPEG" data-lightbox="e-05"><img src="static/images/experience/saetteut-2.JPEG"></a>
+            </div>
+            <small>&nbsp;&nbsp;* 사진을 클릭하면 크게 볼 수 있습니다.</small>
+
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">2019. 05. 05 - 06</span>
+            </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">멋쟁이사자처럼 7기</h3>
+            <div class="subheading mb-3">홍보팀장</div>
+            <p>
+              멋쟁이사자처럼 7기로 매주 웹 프로그래밍을 위한 HTML/CSS/JavaScript, Python과 Django 교육을 받았습니다. Ruby on Rails 스터디에도 참여했습니다.<br>
+              홍보팀에 소속되어 세션 및 행사 관련 컨텐츠 제작, SNS 계정 관리를 담당했습니다.
+            </p>
+
+            <div class="gallery">
+              <a href="static/images/experience/likelion-7-1.png" data-lightbox="e-04"><img src="static/images/experience/likelion-7-1.png"></a>
+              <a href="static/images/experience/likelion-7-2.jpg" data-lightbox="e-04"><img src="static/images/experience/likelion-7-2.jpg"></a>
+            </div>
+            <small>&nbsp;&nbsp;* 사진을 클릭하면 크게 볼 수 있습니다.</small>
+
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">2019. 03 - 2019. 12</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">숙명 우먼인테크 데이</h3>
+            <div class="subheading mb-3">클라우드 컴퓨터 교육 이수 및 해커톤 참여</div>
+            <p>
+              창의적 여성 IT 전문가 육성을 위한 '우먼인테크(Women in Tech) 데이' 행사에 참여했습니다. 차세대 IT 교육 프로그램을 소개하는 'AWS 테크니컬 에센셜 데이(AWS Technical Essentials Day)'에서 클라우드 컴퓨팅의 기본 개념과 핵심적인 활용법을 익히고 직접 실습해보는 시간을 가졌습니다.<br>
+              또한 '숙명-AWS 우먼인테크 해커톤'에는 개발자로 참여했습니다.
+            </p>
+
+            <div class="gallery">
+              <a href="static/images/experience/wit-1.JPG" data-lightbox="e-03"><img src="static/images/experience/wit-1.JPG"></a>
+              <a href="static/images/experience/wit-2.JPG" data-lightbox="e-03"><img src="static/images/experience/wit-2.JPG"></a>
+            </div>
+            <small>&nbsp;&nbsp;* 사진을 클릭하면 크게 볼 수 있습니다.</small>
+
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">2018. 11. 01 - 03</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">2018 여름 청년취업아카데미</h3>
+            <div class="subheading mb-3">SW 개발을 위한 Java기반 알고리즘 과정</div>
+            <p>
+              주5회, 8시간씩 총 200시간의 교육 기간동안 Java 언어, 자료구조와 Oracle sql에 대해 학습했습니다.
+            </p>
+
+            <div class="gallery">
+              <a href="static/images/experience/multicampus.JPG" data-lightbox="e-02"><img src="static/images/experience/multicampus.JPG"></a>
+            </div>
+            <small>&nbsp;&nbsp;* 사진을 클릭하면 크게 볼 수 있습니다.</small>
+
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">2018. 07. 27 - 08. 31</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">리드미 커리단 1기</h3>
+            <div class="subheading mb-3"></div>
+            <p>
+              <a href="https://www.leadme.today/" target="_blank">리드미</a>의 커리어 리뷰단으로, 리드미 홈페이지의 에피소드를 리뷰하고 커리어패스를 소개하며 가치를 발견하고 전하는 활동을 수행했습니다.
+            </p>
+
+            <div class="gallery">
+              <a href="static/images/experience/leadme-1.JPG" data-lightbox="e-01"><img src="static/images/experience/leadme-1.JPG"></a>
+              <a href="static/images/experience/leadme-2.JPG" data-lightbox="e-01"><img src="static/images/experience/leadme-2.JPG"></a>
+            </div>
+            <small>&nbsp;&nbsp;* 사진을 클릭하면 크게 볼 수 있습니다.</small>
+
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">2017. 11. 18 - 2018. 01. 27</span>
             </div>
         </div>
 
@@ -274,47 +429,6 @@
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">2019. 08. 06</span>
-            </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="resume-content">
-            <h3 class="mb-0">멋쟁이사자처럼 7기</h3>
-            <div class="subheading mb-3">홍보팀장 아기사자</div>
-            <p>
-              멋쟁이사자처럼 7기로 매주 Python과 Django 교육을 받았으며 Ruby on Rails 스터디에 참여했습니다.
-            </p>
-
-            <div class="gallery">
-              <a href="static/images/IMG_4130.png" data-lightbox="mygallery01" data-title="멋사 전체OT"><img src="static/images/IMG_4130.png"></a>
-            </div>
-            <small>&nbsp;&nbsp;* 사진을 클릭하면 크게 볼 수 있습니다.</small>
-
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">2019. 03 - 12</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="resume-content">
-            <h3 class="mb-0">리드미 커리단 1기</h3>
-            <div class="subheading mb-3"></div>
-            <p>
-              <a href="https://www.leadme.today/" target="_blank">리드미</a>의 커리어 리뷰단으로, 리드미 홈페이지의 에피소드를 리뷰하고 커리어패스를 소개하며 가치를 발견하고 전하는 활동을 수행했습니다.
-            </p>
-
-            <div class="gallery">
-              <a href="static/images/IMG_5022.JPG" data-lightbox="mygallery06"><img src="static/images/IMG_5022.JPG"></a>
-              <a href="static/images/IMG_3157.JPG" data-lightbox="mygallery06" data-title="1차 모임(발대식)"><img src="static/images/IMG_3157.JPG"></a>
-              <a href="static/images/IMG_4240.JPG" data-lightbox="mygallery06" data-title="2차 모임"><img src="static/images/IMG_4240.JPG"></a>
-              <a href="static/images/IMG_5021.JPG" data-lightbox="mygallery06" data-title="3차 모임"><img src="static/images/IMG_5021.JPG"></a>
-            </div>
-            <small>&nbsp;&nbsp;* 사진을 클릭하면 크게 볼 수 있습니다.</small>
-
-            </div>
-            <div class="resume-date text-md-right">
-              <span class="text-primary">2017. 11. 18 - 2018. 01. 27</span>
             </div>
         </div>
 
@@ -771,8 +885,6 @@
             <div class="gallery">
               <a href="static/images/giveyou.png" data-lightbox="mygallery09"><img src="static/images/giveyou.png"></a>
               <a href="static/images/IMG_1177.JPG" data-lightbox="mygallery09"><img src="static/images/IMG_1177.JPG"></a>
-              <a href="static/images/IMG_1180.JPG" data-lightbox="mygallery09" data-title="AWS Technical Essentials Day"><img src="static/images/IMG_1180.JPG"></a>
-              <a href="static/images/IMG_1181.JPG" data-lightbox="mygallery09"><img src="static/images/IMG_1181.JPG"></a>
             </div>
             <small>&nbsp;&nbsp;* 사진을 클릭하면 크게 볼 수 있습니다.</small>
 
