--- a/index.html
+++ b/index.html
@@ -533,7 +533,7 @@
             <p>2016 ~ 경영대학 경영학부</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">2016. 02 - 현재</span>
+            <span class="text-primary">2016. 02 - 2022. 02 졸업예정</span>
           </div>
         </div>
 
